[FIX] UI5con - Agenda - tiny UI issues
* links style are changed to make them easy to recognize
* topic layout aligned for 20-Min sessions to avoid text overlapping.

--- a/src/blocks/b-header/core.css
+++ b/src/blocks/b-header/core.css
@@ -134,7 +134,7 @@
 
 @media (max-width: 390px) {
 	.b-header {
-		height: 700px;
+		height: 756px;
 	}
 
 	.b-header__logo {
@@ -145,7 +145,7 @@
 
 	.b-header__footer {
 		margin-top: 30px;
-		height: 340px;
+		height: 320px;
 	}
 
 	.b-header__delimiter {
