--- a/src/blocks/b-topic/core.css
+++ b/src/blocks/b-topic/core.css
@@ -85,13 +85,12 @@
 @media (max-width: 900px) {
     .b-track__item.duration_20 .b-topic__title.b-font.size_15 {
         font-size: 10px;
-        max-height: 32px;
         overflow: hidden;
     }
 
     .b-track__item.duration_20 .b-font.size_13 {
         font-size: 12px;
-        max-height: 32px;
+        line-height: 0.8rem;
     }
 
     .b-topic__format {
